etc/iptables/iptables.rules
# Empty iptables rule file
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
*nat
:SHADOWTABLES - [0:0]
-A PREROUTING -p tcp -j SHADOWTABLES
-A OUTPUT -p tcp -j SHADOWTABLES
-A POSTROUTING -o internet0 -j MASQUERADE
-A SHADOWTABLES -d 240.0.0.0/4 -j RETURN
-A SHADOWTABLES -d 224.0.0.0/4 -j RETURN
-A SHADOWTABLES -d 192.168.0.0/16 -j RETURN
-A SHADOWTABLES -d 172.16.0.0/12 -j RETURN
-A SHADOWTABLES -d 169.254.0.0/16 -j RETURN
-A SHADOWTABLES -d 127.0.0.0/8 -j RETURN
-A SHADOWTABLES -d 10.0.0.0/8 -j RETURN
-A SHADOWTABLES -d 0.0.0.0/8 -j RETURN
-A SHADOWTABLES -d 104.16.12.23 -j RETURN
-A SHADOWTABLES -d 162.159.209.4 -j RETURN
-A SHADOWTABLES -d 172.64.75.34 -j RETURN
-A SHADOWTABLES -d 198.41.214.162 -j RETURN
-A SHADOWTABLES -d 1.0.0.0 -j RETURN
-A SHADOWTABLES -d 66.235.200.224 -j RETURN
-A SHADOWTABLES -d 1.1.1.1 -j RETURN
-A SHADOWTABLES -d x.x.x.x -j RETURN
-A SHADOWTABLES -m set --match-set chnroute dst -j RETURN
-A SHADOWTABLES -p tcp -j REDIRECT --to-ports 1080
COMMIT
